CHANGES
=======

0.19.0 (XX-XX-XXXX)
-------------------

- Memory leak in ParserBuffer #579

- Suppport gunicorn's `max_requests` settings in gunicorn worker

- Fix wsgi environment building #573

- Improve access logging #572

- Drop unused host and port from low-level server #586

- Add Python 3.5 `async for` implementation to server websocket #543

- Add Python 3.5 `async for` implementation to client websocket

- Add Python 3.5 `async with` implementation to client websocket